# eval-harness

./: .gitignore  AGENTS.md  README.md  eval_harness.log.2026-06-22  eval_harness.log.2026-06-23  evals.codex_copilot.json  evals.json  evals.json.bak  evals.orinth.json  main.py  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
.serena/: project.yml
docs/: authorisation.md  config.md  evals.md  helpers.md  results.md
docs/eval_patterns/: bug_fix.md  eval_generator.md  new_feature.md  schema_field_mapping.md  search_with_qa.md  test_authoring.md
eval_configs/: evals.basic_eval.json  evals.big.json  evals.big2.json  evals.claude.json  evals.eval_generator.json  evals.inflect_test.json  evals.pi.json  evals.quick.json  evals.run_count.json
example_evals/basic_eval/: __init__.py  eval.py
example_evals/chess_engine/: __init__.py  eval.py
example_evals/encode_repo_forgetful/: __init__.py  eval.py
example_evals/eval_generator/: __init__.py  eval.py
example_evals/inflection_bug_fix/: __init__.py  eval.py
example_evals/inflection_test_writing/: __init__.py  eval.py
example_evals/saleor_spree_mapping/: __init__.py  eval.py
skills/eval_creation/: SKILL.md
skills/eval_execution/: SKILL.md
skills/eval_interpretation/: SKILL.md
src/: docker_runner.py  evals_engine.py  evaluation_file_protocol.py  logging_config.py  models.py  tui.py
src/config/: logging_config.py  settings.py
src/docker/: Dockerfile
src/evals/: encode_repo_forgetful.py  evaluation_file_protocol.py
src/helpers/: file_helper.py  naming.py
src/repositories/: evaluation_results.py
(+32 files in other folders)
