[project]
name = "eval-harness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent-shell-py>=0.1.9",
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
